logging/elasticsearch/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: elasticsearch
  labels:
    app: elasticsearch
    stack: logging
spec:
  rules:
  -
    # host: elasticsearch.minikube.localnet
    host: elastic.danch.home
    http:
      paths:
      - path: /
        backend:
          serviceName: elasticsearch
          servicePort: 9200
